CREATE TABLE IF NOT EXISTS accounts (
  id UUID PRIMARY KEY,
  customer_name VARCHAR(100) NOT NULL,
  account_type VARCHAR(30) NOT NULL,
  balance NUMERIC(14,2) NOT NULL,
  credit_limit NUMERIC(14,2) NOT NULL,
  updated_at TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS transactions (
  id UUID PRIMARY KEY,
  account_id UUID NOT NULL,
  category VARCHAR(40) NOT NULL,
  amount NUMERIC(12,2) NOT NULL,
  direction VARCHAR(10) NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT NOW()
);

INSERT INTO accounts (id, customer_name, account_type, balance, credit_limit)
VALUES
  ('11111111-1111-1111-1111-111111111111', 'Michael Carter', 'CHECKING', 52800.00, 35000.00)
ON CONFLICT (id) DO NOTHING;

INSERT INTO transactions (id, account_id, category, amount, direction, created_at)
VALUES
  ('22222222-2222-2222-2222-222222222221', '11111111-1111-1111-1111-111111111111', 'Utilities', 420.00, 'DEBIT', NOW() - INTERVAL '5 day'),
  ('22222222-2222-2222-2222-222222222222', '11111111-1111-1111-1111-111111111111', 'Supplies', 280.00, 'DEBIT', NOW() - INTERVAL '4 day'),
  ('22222222-2222-2222-2222-222222222223', '11111111-1111-1111-1111-111111111111', 'Software', 310.00, 'DEBIT', NOW() - INTERVAL '3 day'),
  ('22222222-2222-2222-2222-222222222224', '11111111-1111-1111-1111-111111111111', 'Other', 200.00, 'DEBIT', NOW() - INTERVAL '2 day'),
  ('22222222-2222-2222-2222-222222222225', '11111111-1111-1111-1111-111111111111', 'Investment', 1500.00, 'CREDIT', NOW() - INTERVAL '1 day')
ON CONFLICT (id) DO NOTHING;
